stylesheet.css
#over-container {
    width: 70%;
    margin-left: 15%;
    margin-right: 15%;
    border:1px solid red;
    display:flex;
    flex-wrap: wrap;
    gap: 1.5%;
}
#over-container > * {
    border: 1px solid red;
    flex-grow: 1;
}
#div-start-button {
    flex: 0 1 100%;
    display: flex;
    justify-content: center;
}
.div-score-container {
    flex-basis: auto;
}
#game-container {
    flex: 1 0 35%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding: 2%;
    gap: 3%;
}
#game-container > * {
    border: 1px solid red;
}
#game-container button {
    flex: 0 1 30%;
    height: 30%;
}
#game-container > :nth-child(1) {
    flex: 0 1 100%;
    text-align: center;
}
#game-container > :nth-child(5) {
    flex: 0 1 100%;
    text-align: center;
}

